--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,13 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+    
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,9 +25,23 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <div>Write a new tweet</div>
     </nav>
 
+    <!-- Header section -->
+    <header>
+      <div>
+        <img src="/images/profile-hex.png" alt="Profile Pic">
+      </div>
+      <br>
+      <div>
+        <h2>Andrew Ku</h2>
+      </div>
+    </header>
+
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corporis illo eos placeat voluptatem ad fugiat consequatur iusto, libero veritatis soluta porro minima repellat repudiandae doloribus explicabo distinctio dolor consectetur.</p>
+    </main>
   </body>
 </html>
