--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,7 +42,22 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corporis illo eos placeat voluptatem ad fugiat consequatur iusto, libero veritatis soluta porro minima repellat repudiandae doloribus explicabo distinctio dolor consectetur.</p>
+      <section class="new-tweet">
+        <div>
+          <h2>Compose Tweet</h2>
+        </div>
+        <div class="tweet">
+          <form action="/tweets" method="POST">
+            <label for="tweet-text"></label>
+            <textarea placeholder="What are you humming about?" name="text" id="tweet-text" maxlength="140" cols="90"></textarea>
+            <!-- <hr> -->
+            <div class="container-tweet-details">
+              <button class="btn" type="submit">Tweet</button>
+              <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
