add counter functionality with jquery

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -49,7 +50,7 @@
         <div class="tweet">
           <form action="/tweets" method="POST">
             <label for="tweet-text"></label>
-            <textarea placeholder="What are you humming about?" name="text" id="tweet-text" maxlength="140" cols="90"></textarea>
+            <textarea placeholder="What are you humming about?" name="text" id="tweet-text" cols="90"></textarea>
             <!-- <hr> -->
             <div class="container-tweet-details">
               <button class="btn" type="submit">Tweet</button>
