implemented 2 functions to create an element and display test data. Added ajax post handling of data/tweet

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           </form>
         </div>
       </section>
-      <section id="articles-container">
+      <section id="tweets-container">
         <!-- Example -->
         <article class="tweet">
           <header>
